member dan reward

--- a/html/wan/wan/reward.html
+++ b/html/wan/wan/reward.html
@@ -79,79 +79,27 @@
             </div>
         </div>
     </header>
-    <section class="hero-area">
-        <div class="hero-bg-left"><img src="img/home1/hero-left-bg.png" alt=""></div>
-        <div class="hero-bg-right"><img src="img/home1/hero-right-bg.png" alt=""></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 col-md-7 col-12 me-2">
-                    <div class="hero-content">
-                        <h2 class="title"><span class="light">Who we?<br></span>LA GENERACION "1NFIX"</h2>
-                        <!-- <div class="start-video"> 
-                            <a href="#" class="quote btn-style-outline- 1">Daftar Sebagai Penyedia</a>
-                        </div> -->
-                    </div>
-                </div>
-            </div>
+<section class="hero-area">
+  <div class="container text-center">
+    <div class="reward-wrapper py-5">
+      <div class="reward-icon mb-4">
+        <div class="rounded-circle d-inline-flex align-items-center justify-content-center shadow-sm" 
+             style="width:120px;height:120px;background-color:#f5f6fa;">
+          <i class="bi bi-trophy" style="font-size:60px;color:#adb5bd;"></i>
         </div>
-    </section>
-    <section class="about-area" id="_about">
-        <div class="about-banner-contact wow fadeInRight" data-wow-duration="1.0s" data-wow-delay="0.5s"><img
-                src="img/pedang.png" alt=""></div>
-        <div class="about-right-bg"><img src="img/home1/about-right-bg.png" alt=""></div>
-        <div class="about-left-bg wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.5s"><img
-                src="img/home1/about-left-banner.png" alt=""></div>
-        <div class="about-top-plant wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.5s"><img
-                src="img/shield.png" alt=""></div>
-        <div class="container">
+      </div>
 
-            <div class="row">
-                <div class="col-lg-6 col-12">
-                    <div class="about-all-boxes">
-                        <div class="row">
-                            <div class="col-lg-6 col-sm-6 col-12 wow fadeInUp animated" data-wow-delay="00ms"
-                                data-wow-duration="1500ms">
-                                <div class="about-box">
-                                    <div class="content">
-                                        <h2 class="name">On Time</h2>
-                                        <p class="text">Do The job On time</p>
-                                    </div>
-                                </div>
-                                <div class="about-box">
-                                    <div class="content">
-                                        <h2 class="name">A cool friend</h2>
-                                        <p class="text">Having a comfortable circle of friends</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-sm-6 col-12 wow fadeInUp animated" data-wow-delay="300ms"
-                                data-wow-duration="1500ms">
-                                <div class="about-box-martop80 mar-top-80"></div>
-                                <div class="about-box">
-                                    <div class="content">
-                                        <h2 class="name">Si Anti-Ribet</h2>
-                                        <p class="text">Tidak perlu berdesakan dan menunggu lama di tempat. </p>
-                                    </div>
-                                </div>
-                                <div class="about-box">
-                                    <div class="content">
-                                        <h2 class="name">Teman Santai</h2>
-                                        <p class="text">Ambil nomor dari mana saja, kapan saja.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-7 col-12 d-flex align-items-center">
-                    <div class="about-right-content section-title">
-                        <h2 class="intro">What does infix have?</h2>
-                        <h2 class="title">With <span class="bold">1nfix</span></h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+      <h3 class="fw-bold mb-2">No Rewards Yet</h3>
+      <p class="text-muted mb-4">
+        Our class hasn’t earned any awards or achievements yet.<br>
+        Stay motivated — the next victory is waiting for us 💪
+      </p>
+    </div>
+  </div>
+</section>
+
+
+
     <footer>
         <div class="footer-bottom-area">
             <div class="container">
