--- a/html/wan/wan/index.html
+++ b/html/wan/wan/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<!-- Mirrored from quomodosoft.com/html/wan/wan/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 24 Feb 2025 12:06:45 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-
 <head>
-    <!--- Basic Page Needs  -->
+    <!-- Basic Page Needs -->
     <meta charset="utf-8">
     <title>Infix</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Mobile Specific Meta  -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <!-- CSS -->
 
+    <!-- CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="css/all.min.css">
@@ -29,28 +19,29 @@
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Favicon -->
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" type="image/png" href="img/LogoKelas1.png">
-
 </head>
 
 <body>
     <div id="preloader"></div>
+
+    <!-- HEADER -->
     <header>
         <div class="header-container">
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6">
-                    <div class="logo">
-                        <a href="index.html" class="link">1nfix</span></a>
+                    <div class="logo mt-3">
+                        <a href="index.html" class="link">1nfix</a>
                     </div>
                 </div>
+
                 <div class="col-lg-6 col-md-3 col-sm-8 col-6">
                     <div class="main-menu stellarnav">
                         <nav class="navbar-custom py-3" style="background-color: transparent;">
                             <div class="container justify-content-center p-0">
                                 <ul class="nav nav-pills custom-nav-pills position-relative">
-                                    <span class="active-indicator"></span>
 
                                     <li class="nav-item">
                                         <a class="nav-link" href="members.html" data-page="members">Members</a>
@@ -67,46 +58,49 @@
                 <div class="col-lg-4 col-md-6 col-sm-7 col-12 d-none d-md-block">
                     <div class="header-right">
                         <div class="get-quote">
-                            <a href="#" class="link btn-style-1">Sign In</a>
+                            <a href="#" class="link btn-style-1 mt-4">Sign In</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- HERO SECTION -->
     <section class="hero-area">
         <div class="hero-bg-left"><img src="img/home1/hero-left-bg.png" alt=""></div>
         <div class="hero-bg-right"><img src="img/home1/hero-right-bg.png" alt=""></div>
-        <div class="hero-banner wow fadeIn animated" data-wow-duration="1.0s" data-wow-delay="1.0s"><img
-                class="item-bounce" src="img/LogoKelas1.png" alt=""></div>
+        <div class="hero-banner wow fadeIn animated" data-wow-duration="1.0s" data-wow-delay="1.0s">
+            <img class="item-bounce" src="img/LogoKelas1.png" alt="">
+        </div>
 
         <div class="container">
-            
-                <div class="col-lg-7 col-md-7 col-12 me-2">
-                    <div class="hero-content">
-                        <h2 class="title"><span class="light">Who we?<br></span>LA GENERACION "1NFIX"</h2>
-                        <!-- <div class="start-video"> 
-                            <a href="#" class="quote btn-style-outline- 1">Daftar Sebagai Penyedia</a>
-                        </div> -->
-                    </div>
+            <div class="col-lg-7 col-md-7 col-12 me-2">
+                <div class="hero-content">
+                    <h2 class="title"><span class="light">Who we?<br></span>LA GENERACION "1NFIX"</h2>
                 </div>
+            </div>
         </div>
     </section>
-    <section class="about-area" id="_about">
-        <div class="about-banner-contact wow fadeInRight" data-wow-duration="1.0s" data-wow-delay="0.5s"><img
-                src="img/pedang.png" alt=""></div>
-        <div class="about-right-bg"><img src="img/home1/about-right-bg.png" alt=""></div>
-        <div class="about-left-bg wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.5s"><img
-                src="img/home1/about-left-banner.png" alt=""></div>
-        <div class="about-top-plant wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.5s"><img
-                src="img/shield.png" alt=""></div>
-        <div class="container">
 
+    <!-- ABOUT SECTION -->
+    <section class="about-area" id="_about">
+        <div class="about-banner-contact wow fadeInRight" data-wow-duration="1.0s" data-wow-delay="0.5s">
+            <img src="img/pedang.png" alt="">
+        </div>
+        <div class="about-right-bg"><img src="img/home1/about-right-bg.png" alt=""></div>
+        <div class="about-left-bg wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.5s">
+            <img src="img/home1/about-left-banner.png" alt="">
+        </div>
+        <div class="about-top-plant wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay="0.5s">
+            <img src="img/shield.png" alt="">
+        </div>
+        <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12">
                     <div class="about-all-boxes">
                         <div class="row">
-                            <div class="col-lg-6 col-sm-6 col-12 wow fadeInUp animated" data-wow-delay="00ms"
+                            <div class="col-lg-6 col-sm-6 col-12 wow fadeInUp" data-wow-delay="00ms"
                                 data-wow-duration="1500ms">
                                 <div class="about-box">
                                     <div class="content">
@@ -121,18 +115,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-sm-6 col-12 wow fadeInUp animated" data-wow-delay="300ms"
-                            data-wow-duration="1500ms">
-                            <div class="about-box-martop80 mar-top-80"></div>
-                            <div class="about-box">
-                                <div class="content">
+                            <div class="col-lg-6 col-sm-6 col-12 wow fadeInUp" data-wow-delay="300ms"
+                                data-wow-duration="1500ms">
+                                <div class="about-box-martop80 mar-top-80"></div>
+                                <div class="about-box">
+                                    <div class="content">
                                         <h2 class="name">On Time</h2>
-                                        <p class="text">Do The job On time</p>
+                                        <p class="text">Do the job on time</p>
                                     </div>
                                 </div>
                                 <div class="about-box">
                                     <div class="content">
-                                        <h2 class="name">. F.O.C.U.S – Future-Oriented Class, Uniting Success</h2>
+                                        <h2 class="name">F.O.C.U.S – Future-Oriented Class, Uniting Success</h2>
                                         <p class="text">Always looking ahead — learning today to build tomorrow.</p>
                                     </div>
                                 </div>
@@ -140,6 +134,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-6 col-md-7 col-12 d-flex align-items-center">
                     <div class="about-right-content section-title">
                         <h2 class="intro">What does infix have?</h2>
@@ -149,6 +144,8 @@
             </div>
         </div>
     </section>
+
+    <!-- FOOTER -->
     <footer>
         <div class="footer-bottom-area">
             <div class="container">
@@ -156,9 +153,13 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="fba-social">
                             <ul class="social">
-                                <li><a href="https://www.instagram.com/int.formatics_class/" target="_blank"
-                                        rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"
-                                            aria-hidden="true"></i><span class="text">Instagram</span></a></li>
+                                <li>
+                                    <a href="https://www.instagram.com/int.formatics_class/" target="_blank"
+                                        rel="noopener noreferrer" aria-label="Instagram">
+                                        <i class="fab fa-instagram" aria-hidden="true"></i>
+                                        <span class="text">Instagram</span>
+                                    </a>
+                                </li>
                             </ul>
                             <p class="copyright">Copyright By@LAGeneracionDoradaDe1nfix+ - 2025</p>
                         </div>
@@ -167,35 +168,48 @@
             </div>
         </div>
     </footer>
+
+    <!-- SCRIPT FIX NAV -->
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const links = document.querySelectorAll(".custom-nav-pills .nav-link");
-            const indicator = document.querySelector(".active-indicator");
+       document.addEventListener("DOMContentLoaded", function () {
+    const links = document.querySelectorAll(".custom-nav-pills .nav-link");
+    const indicator = document.createElement("span");
+    indicator.classList.add("active-indicator");
+    document.querySelector(".custom-nav-pills").appendChild(indicator);
 
-            function moveIndicator(element) {
-                const rect = element.getBoundingClientRect();
-                const parentRect = element.parentElement.parentElement.getBoundingClientRect();
-                indicator.style.width = rect.width + "px";
-                indicator.style.left = rect.left - parentRect.left + "px";
-            }
+    function moveIndicator(el) {
+        const rect = el.getBoundingClientRect();
+        const parentRect = el.parentElement.parentElement.getBoundingClientRect();
+        indicator.style.width = rect.width + "px";
+        indicator.style.left = rect.left - parentRect.left + "px";
+        indicator.style.transition = "all 0.3s ease";
+    }
 
-            links.forEach(link => {
-                link.addEventListener("click", function (e) {
-                    e.preventDefault();
-                    links.forEach(l => l.classList.remove("active"));
-                    this.classList.add("active");
-                    moveIndicator(this);
-                });
-            });
+    // indikator disembunyikan dulu
+    indicator.style.display = "none";
 
-            // Posisi awal indikator
-            const activeLink = document.querySelector(".nav-link.active");
-            if (activeLink) moveIndicator(activeLink);
+    links.forEach(link => {
+        link.addEventListener("click", function () {
+            links.forEach(l => l.classList.remove("active"));
+            this.classList.add("active");
+            indicator.style.display = "block"; // baru muncul saat diklik
+            moveIndicator(this);
         });
+
+        link.addEventListener("mouseenter", () => {
+            if (document.querySelector(".nav-link.active")) moveIndicator(link);
+        });
+
+        link.addEventListener("mouseleave", () => {
+            const current = document.querySelector(".nav-link.active");
+            if (current) moveIndicator(current);
+        });
+    });
+});
+
     </script>
 
-
-    <!-- Scripts -->
+    <!-- JS -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/wow.min.js"></script>
@@ -213,8 +227,5 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/theme.js"></script>
 </body>
-
-
-<!-- Mirrored from quomodosoft.com/html/wan/wan/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 24 Feb 2025 12:07:18 GMT -->
 
 </html>
