--- a/html/wan/wan/reward.html
+++ b/html/wan/wan/reward.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Infix</title>
+    <title>Infix ~ Reward & achievements</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="">
