--- a/html/wan/wan/index.html
+++ b/html/wan/wan/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Infix</title>
+    <title>Infix ~ Introduction</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- CSS -->
@@ -19,8 +19,7 @@
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" type="image/png" href="img/LogoKelas1.png">
 </head>
 
@@ -160,6 +159,14 @@
                                         <span class="text">Instagram</span>
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="https://wa.me/6282131648786?text=Halo ur Website it's so cool"
+                                        target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+                                        <i class="fab fa-whatsapp" aria-hidden="true"></i>
+                                        <span class="text">WhatsApp</span>
+                                    </a>
+                                </li>
+
                             </ul>
                             <p class="copyright">Copyright By@LAGeneracionDoradaDe1nfix+ - 2025</p>
                         </div>
@@ -171,41 +178,41 @@
 
     <!-- SCRIPT FIX NAV -->
     <script>
-       document.addEventListener("DOMContentLoaded", function () {
-    const links = document.querySelectorAll(".custom-nav-pills .nav-link");
-    const indicator = document.createElement("span");
-    indicator.classList.add("active-indicator");
-    document.querySelector(".custom-nav-pills").appendChild(indicator);
+        document.addEventListener("DOMContentLoaded", function () {
+            const links = document.querySelectorAll(".custom-nav-pills .nav-link");
+            const indicator = document.createElement("span");
+            indicator.classList.add("active-indicator");
+            document.querySelector(".custom-nav-pills").appendChild(indicator);
 
-    function moveIndicator(el) {
-        const rect = el.getBoundingClientRect();
-        const parentRect = el.parentElement.parentElement.getBoundingClientRect();
-        indicator.style.width = rect.width + "px";
-        indicator.style.left = rect.left - parentRect.left + "px";
-        indicator.style.transition = "all 0.3s ease";
-    }
+            function moveIndicator(el) {
+                const rect = el.getBoundingClientRect();
+                const parentRect = el.parentElement.parentElement.getBoundingClientRect();
+                indicator.style.width = rect.width + "px";
+                indicator.style.left = rect.left - parentRect.left + "px";
+                indicator.style.transition = "all 0.3s ease";
+            }
 
-    // indikator disembunyikan dulu
-    indicator.style.display = "none";
+            // indikator disembunyikan dulu
+            indicator.style.display = "none";
 
-    links.forEach(link => {
-        link.addEventListener("click", function () {
-            links.forEach(l => l.classList.remove("active"));
-            this.classList.add("active");
-            indicator.style.display = "block"; // baru muncul saat diklik
-            moveIndicator(this);
+            links.forEach(link => {
+                link.addEventListener("click", function () {
+                    links.forEach(l => l.classList.remove("active"));
+                    this.classList.add("active");
+                    indicator.style.display = "block"; // baru muncul saat diklik
+                    moveIndicator(this);
+                });
+
+                link.addEventListener("mouseenter", () => {
+                    if (document.querySelector(".nav-link.active")) moveIndicator(link);
+                });
+
+                link.addEventListener("mouseleave", () => {
+                    const current = document.querySelector(".nav-link.active");
+                    if (current) moveIndicator(current);
+                });
+            });
         });
-
-        link.addEventListener("mouseenter", () => {
-            if (document.querySelector(".nav-link.active")) moveIndicator(link);
-        });
-
-        link.addEventListener("mouseleave", () => {
-            const current = document.querySelector(".nav-link.active");
-            if (current) moveIndicator(current);
-        });
-    });
-});
 
     </script>
 
