--- a/html/wan/wan/members.html
+++ b/html/wan/wan/members.html
@@ -9,7 +9,7 @@
 <head>
     <!--- Basic Page Needs  -->
     <meta charset="utf-8">
-    <title>Infix</title>
+    <title>Infix ~ Members</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keywords" content="">
@@ -44,24 +44,24 @@
                         <a href="index.html" class="link">1nfix</span></a>
                     </div>
                 </div>
-<div class="col-lg-6 col-md-3 col-sm-8 col-6">
-  <div class="main-menu stellarnav">
-    <nav class="navbar-custom py-3" style="background-color: transparent;">
-      <div class="container justify-content-center p-0">
-        <ul class="nav nav-pills custom-nav-pills position-relative">
-          <span class="active-indicator position-absolute"></span>
+                <div class="col-lg-6 col-md-3 col-sm-8 col-6">
+                    <div class="main-menu stellarnav">
+                        <nav class="navbar-custom py-3" style="background-color: transparent;">
+                            <div class="container justify-content-center p-0">
+                                <ul class="nav nav-pills custom-nav-pills position-relative">
+                                    <span class="active-indicator position-absolute"></span>
 
-          <li class="nav-item">
-            <a href="members.html" class="nav-link active">Members</a>
-          </li>
-          <li class="nav-item">
-            <a href="reward.html" class="nav-link">Reward</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-</div>
+                                    <li class="nav-item">
+                                        <a href="members.html" class="nav-link active">Members</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="reward.html" class="nav-link">Reward</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                </div>
 
                 <div class="col-lg-4 col-md-6 col-sm-7 col-12 d-none d-md-block">
                     <div class="header-right">
@@ -165,38 +165,38 @@
         </div>
     </footer>
     <!-- Scripts -->
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const links = document.querySelectorAll(".custom-nav-pills .nav-link");
-  const indicator = document.querySelector(".active-indicator");
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const links = document.querySelectorAll(".custom-nav-pills .nav-link");
+            const indicator = document.querySelector(".active-indicator");
 
-  function moveIndicator(element) {
-    const rect = element.getBoundingClientRect();
-    const parentRect = element.parentElement.parentElement.getBoundingClientRect();
-    indicator.style.width = rect.width + "px";
-    indicator.style.left = rect.left - parentRect.left + "px";
-  }
+            function moveIndicator(element) {
+                const rect = element.getBoundingClientRect();
+                const parentRect = element.parentElement.parentElement.getBoundingClientRect();
+                indicator.style.width = rect.width + "px";
+                indicator.style.left = rect.left - parentRect.left + "px";
+            }
 
-  // Efek klik dengan pindah halaman
-  links.forEach(link => {
-    link.addEventListener("click", function (e) {
-      e.preventDefault();
-      links.forEach(l => l.classList.remove("active"));
-      this.classList.add("active");
-      moveIndicator(this);
+            // Efek klik dengan pindah halaman
+            links.forEach(link => {
+                link.addEventListener("click", function (e) {
+                    e.preventDefault();
+                    links.forEach(l => l.classList.remove("active"));
+                    this.classList.add("active");
+                    moveIndicator(this);
 
-      // pindah halaman dengan sedikit delay animasi
-      setTimeout(() => {
-        window.location.href = this.getAttribute("href");
-      }, 150);
-    });
-  });
+                    // pindah halaman dengan sedikit delay animasi
+                    setTimeout(() => {
+                        window.location.href = this.getAttribute("href");
+                    }, 150);
+                });
+            });
 
-  // Posisi awal indikator
-  const activeLink = document.querySelector(".nav-link.active");
-  if (activeLink) moveIndicator(activeLink);
-});
-</script>
+            // Posisi awal indikator
+            const activeLink = document.querySelector(".nav-link.active");
+            if (activeLink) moveIndicator(activeLink);
+        });
+    </script>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/wow.min.js"></script>
